configs/istio-peer-authentication.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: shieldpay-strict-mtls
  namespace: shieldpay
spec:
  mtls:
    mode: STRICT
